tests/sources/invalid/enums/enum_construct_errors.fire
// Malformed enum variant constructions.
enum Color {
    Red,
    Green
}

// Missing variant name after '.'
Color a = Color.;  //~ ERROR FS-PARSE-0010 @17
//~^ ERROR FS-PARSE-0010 @17

// Unknown variant
Color b = Color.Purple;  //~ ERROR FS-PARSE-0012 @17
